[package]
name = "MoonStatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui_extras= { version="0.22.0", features = ["datepicker"] }
chrono = "0.4.26"
dotenv = "0.15.0"
reqwest = {version="0.11.18", features = ["blocking","json"]}
serde_json = "1.0.96"